# HoYoCenter

./: .gitignore  README.md  build.py  env.py  main.py  make_res.py  pyproject.toml  requirements.txt
.github/workflows/: debug.yml  release.yml
data/: url.json
lib/: debug.py  init.py
pack/: desktop.desktop
pack/arch/: .gitignore  PKGBUILD
pack/deb/: .gitignore  build.py
pack/deb/src/DEBIAN/: control_t
src/: env.py  main.py  models.py  server.py  utils.py
src/core/: auth.py  data.py  download.py  error.py  requests.py
src/data/: PrivacyRights.html  urls.json
src/models/: config.py  endpoints.py  idx.py  state.py
src/views/: login.py
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: bookmark.js
web/src/: App.vue  main.ts  rpc.ts  stores.ts  utils.ts  worker.ts
web/src/api/: auth.ts  data.ts  res.ts  rpc.ts
web/src/api/model/: endpoint.ts  enka.ts  game_data.ts
web/src/assets/: main.css
web/src/assets/name2id/: sr.json  ys.json
web/src/components/: CharacterCard.vue  SettingItem.vue
web/src/i18n/: index.ts
web/src/i18n/locales/: zh-cn.json
web/src/model/: endpoint.ts  enka.ts  mihoyo.ts  name2id.ts
web/src/router/: index.ts
web/src/views/: Character.vue  FallbackView.vue  HoYoLabView.vue  Home.vue  HomeView.vue  Init.vue  InitView.vue  MonsterInfo.vue  Setting.vue  SettingView.vue
