[project]
dependencies = [
  "click>=8.1.8",
  "easydict>=1.13",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "platformdirs>=4.3.6",
  "pywebview[gtk]>=5.3.2",
]
description = "Add your description here"
name = "hoyocenter"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
qt = [
  "pywebview[qt]>=5.3.2",
]
